--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -22,8 +22,14 @@
 			<vc:exchange-all></vc:exchange-all>
 		</aside>
 	</div>
+
 	<script type="text/javascript">
-		LoadWeather("Weather");
+
+	document.addEventListener("DOMContentLoaded", function () {
+		LoadWeather("Weather")
+	});
+
+	
 	</script>
 
 
