--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -86,6 +86,8 @@
 							}
 						}
 					</ul>
+					<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+					<div class="elfsight-app-51d13b44-4d2c-44a9-873b-2b7b0b3e9db9" data-elfsight-app-lazy></div>
 					<partial name="_LoginPartial" />
 					<form class="d-flex" role="search" asp-controller="News" asp-action="Search" method="post">
 						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
