--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -2,15 +2,22 @@
 @inject IWeatherApiHandler _handler
 
 @{
-	//string weatherTime = DateTime.Now.ToString("yyyy-MM-dd HH:00:00");
-	//DateTime testTime = Convert.ToDateTime(weatherTime);
 	WeatherStats stats = new();
 	string city = "Stockholm";
+	int direction = 0;
 	string hourMin = DateTime.Now.ToString("HH:mm");
 	int hour = DateTime.Now.Hour;
+	DateTime sunUpTime = Convert.ToDateTime( Model.daily.sunrise[0]);
+	string sunUp = sunUpTime.ToString("HH:mm") ?? "Could not parse DateTime";
+	DateTime sunDownTime = Convert.ToDateTime(Model.daily.sunset[0]);
+	string sunDown = sunDownTime.ToString("HH:mm");
+	int humidity = Model.hourly.relative_humidity_2m[hour];
+	int windDir = Model.hourly.wind_direction_10m[direction];
+	float windStr = Model.hourly.wind_speed_10m[hour];
+
+	Tables tables = new();
 	int condition;
 	string conditionStr;
-	
 	if (!Model.IsPlaceholder)
 	{
 		condition = Model.hourly.weather_code[hour]; //"Condition not available"
@@ -22,6 +29,8 @@
 		conditionStr = "Loading";
 		Model.NameOfCity = "Stockholm";
 	}
+	string windDirection = tables.GetDirectionFromInt(windDir);
+	string windSpeed = tables.GetSpeedFromFloat(windStr);
 }
 
 <div class="weather-details">
@@ -33,24 +42,28 @@
 				</div>
 				<form>
 					<div class="mt-3">
-						<label for=" City" class="form-label">City:</label><br />
-						<input type="text" class="form-control" id="city" placeholder="@Model.NameOfCity" default="@city" />
+						<input type="text" class="form-control" id="city" placeholder="Change City" default="@city" />
 					</div>
+					
 				</form>
-
 				<div class="p-2 ps-0">
 					<button class="btn-sm" id="searchcity" onclick="FindNewCity(Search())">Find</button>
 				</div>
-			
-				<p>Time: @hourMin</p>
+				<div class="col-6 ps-0">
+				<p>Time: @hourMin </p>
+				<p>Sun  Up: @sunUp   Down: @sunDown</p>
+				</div>	 
 				<p>Temperature:  @{
 						if(!Model.IsPlaceholder)
 						{
 							@Model.current.temperature_2m
 						}
-					} °C</p>
-				@* <p>Temperature: @Model.hourly.temperature_2m[hour] °C</p> *@
+					} °C
+				</p>	@* <p>Temperature: @Model.hourly.temperature_2m[hour] °C</p> *@	
 				<p>Condition: @conditionStr</p>
+				<p>Humidity: @humidity%</p>
+				<p>Windspeed: @windSpeed @windStr m/s </p>
+				<p>Winddirection: @windDirection @windDir°</p>				
 				<p><a href="https://www.smhi.se/en/q/Linköping/2694762">Weather SMHI</a></p>
 			</div>
 		</div>
