--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -22,7 +22,7 @@
 	{
 		condition = Model.hourly.weather_code[hour]; //"Condition not available"
 
-		conditionStr = _handler.GetConditionFromInt(condition);
+		conditionStr = tables.GetConditionFromInt(condition);
 	}
 	else
 	{
