A Bunch of Shit in progress. Made a lot of design. Made not so much what the branch said I would do. Thank you very much.

--- a/CNewsProject/Views/Account/Login.cshtml
+++ b/CNewsProject/Views/Account/Login.cshtml
@@ -20,8 +20,8 @@
         Remember me? <input type="checkbox" asp-for="RememberMe" />
     </div>
     <button class="btn btn-primary" type="submit">Log In</button>
-    <button asp-action="Register" class="btn btn-primary">Register</button>
-
-    <br />
-    <a asp-action="ForgotPassword">Reset Password</a>
 </form>
+
+<a asp-action="Register" class="btn btn-primary">Register</a>
+<br />
+<a asp-action="ForgotPassword">Reset Password</a>
