--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -1,65 +1,65 @@
-﻿@model WeatherStats
-
-
-@{
-
-	WeatherStats stats = new();
-	string city = "Stockholm";
-	string hourMin = DateTime.Now.ToString("HH:mm");
-	int hour = DateTime.Now.Hour;
-	int condition = 0;
-	string weatherTime = DateTime.Now.ToString("yyyy-MM-dd HH:00:00");
-	DateTime testTime = Convert.ToDateTime(weatherTime);
-	condition = Model.hourly.weather_code[condition]; //"Condition not available"
-
-}
-
-<div class="weather-details">
-	<div class="weather-info">
-		<div class="card">
-			<div class="card-body">
-				<div style="background-color:#dee6ef;">
-					<h3 id="place" >Weather: @Model.NameOfCity</h3>
-				</div>
-				<form>
-					<div class="mt-3">
-						<label for=" City" class="form-label">City:</label><br />
-						<input type="text" class="form-control" id="city" placeholder="@Model.NameOfCity" default="@city" />
-					</div>
-				</form>
-
-				<div class="p-2 ps-0">
-					<button class="btn-sm" id="searchcity" onclick="FindNewCity(Search())">Find</button>
-				</div>
-			
-				<p>Time: @hourMin</p>
-				<p>Temperature: @Model.current.temperature_2m °C</p>
-				@* <p>Temperature: @Model.hourly.temperature_2m[hour] °C</p> 
-				<p>Condition: @Model.hourly.weather_code</p>*@
-
-				@* <div class="weather-icon">☀️</div> *@
-				@* @if (Model.hourly.weather_code?.ToLower().Contains("sun") == true || Model?.Condition?.ToLower().Contains("clear") == true)
-				{
-					<span>☀️ Sunny</span>
-				}
-				else if (Model.hourly.weather_code.ToLower().Contains("rain") == true)
-				{
-					<span>🌧️ Rainy</span>
-				}
-				else
-				{
-					<span>🌤️ @Model.hourly.weather_code</span> <!-- Fallback to showing the actual condition -->
-				} *@
-			
-				<p><a href="https://www.smhi.se/en/q/Linköping/2694762">Weather SMHI</a></p>
-			</div>
-		</div>
-	</div>
-
-</div>
-
-<script type="text/javascript">
-	function Search() {
-		return document.getElementById('city').value;
-	}
-</script>
+﻿@* @model WeatherStats *@
+@* *@
+@* *@
+@* @{ *@
+@* *@
+@* 	WeatherStats stats = new(); *@
+@* 	string city = "Stockholm"; *@
+@* 	string hourMin = DateTime.Now.ToString("HH:mm"); *@
+@* 	int hour = DateTime.Now.Hour; *@
+@* 	int condition = 0; *@
+@* 	string weatherTime = DateTime.Now.ToString("yyyy-MM-dd HH:00:00"); *@
+@* 	DateTime testTime = Convert.ToDateTime(weatherTime); *@
+@* 	condition = Model.hourly.weather_code[condition]; //"Condition not available" *@
+@* *@
+@* } *@
+@* *@
+@* <div class="weather-details"> *@
+@* 	<div class="weather-info"> *@
+@* 		<div class="card"> *@
+@* 			<div class="card-body"> *@
+@* 				<div style="background-color:#dee6ef;"> *@
+@* 					<h3 id="place" >Weather: @Model.NameOfCity</h3> *@
+@* 				</div> *@
+@* 				<form> *@
+@* 					<div class="mt-3"> *@
+@* 						<label for=" City" class="form-label">City:</label><br /> *@
+@* 						<input type="text" class="form-control" id="city" placeholder="@Model.NameOfCity" default="@city" /> *@
+@* 					</div> *@
+@* 				</form> *@
+@* *@
+@* 				<div class="p-2 ps-0"> *@
+@* 					<button class="btn-sm" id="searchcity" onclick="FindNewCity(Search())">Find</button> *@
+@* 				</div> *@
+@* 			 *@
+@* 				<p>Time: @hourMin</p> *@
+@* 				<p>Temperature: @Model.current.temperature_2m °C</p> *@
+@* 				@* <p>Temperature: @Model.hourly.temperature_2m[hour] °C</p>  *@
+@* 				<p>Condition: @Model.hourly.weather_code</p>*@ 
+@* *@
+@* 				$1$ <div class="weather-icon">☀️</div> #1# *@
+@* 				@* @if (Model.hourly.weather_code?.ToLower().Contains("sun") == true || Model?.Condition?.ToLower().Contains("clear") == true) *@
+@* 				{ *@
+@* 					<span>☀️ Sunny</span> *@
+@* 				} *@
+@* 				else if (Model.hourly.weather_code.ToLower().Contains("rain") == true) *@
+@* 				{ *@
+@* 					<span>🌧️ Rainy</span> *@
+@* 				} *@
+@* 				else *@
+@* 				{ *@
+@* 					<span>🌤️ @Model.hourly.weather_code</span> <!-- Fallback to showing the actual condition --> *@
+@* 				} *@ 
+@* 			 *@
+@* 				<p><a href="https://www.smhi.se/en/q/Linköping/2694762">Weather SMHI</a></p> *@
+@* 			</div> *@
+@* 		</div> *@
+@* 	</div> *@
+@* *@
+@* </div> *@
+@* *@
+@* <script type="text/javascript"> *@
+@* 	function Search() { *@
+@* 		return document.getElementById('city').value; *@
+@* 	} *@
+@* </script> *@
