--- a/CNewsProject/Views/Shared/_LoginPartial.cshtml
+++ b/CNewsProject/Views/Shared/_LoginPartial.cshtml
@@ -1,20 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<AppUser> signInManager
-@inject UserManager<AppUser> userManager
+@inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
 
 
 <ul class="navbar-nav">
-    @if (signInManager.IsSignedIn(User))
+    @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
             <a class="text-light nav-link" asp-controller="Account" asp-action="Profile">
                 @User.Identity?.Name
-                👤
             </a>
         </li>
         <li class="nav-item">
             <form asp-controller="Account" asp-action="Logout">
-                <button type="submit" class="nav-link btn btn-link text-light">Logout</button>
+                <button type="submit" class="nav-link text-light">Logout</button>
             </form>
         </li>
     }
