--- a/CNewsProject/wwwroot/css/site.css
+++ b/CNewsProject/wwwroot/css/site.css
@@ -18,3 +18,70 @@
     text-decoration: none;
     color:black;
 }
+
+.c-link-hover-container:hover{
+    .c-link-hover{
+        text-decoration: underline;
+    }
+}
+
+.c-link-hover {
+    text-decoration: none;
+}
+
+.c-nav-hat{
+    padding: 2rem 1rem;
+}
+
+.c-gradient-90{
+    background: rgb(0,153,153);
+    background: linear-gradient(90deg, rgba(0,153,153,1) 0%, rgba(0,51,102,1) 100%);
+}
+
+.c-nav-sticky {
+    position:  sticky;
+    top:  0;
+    padding: 0;
+}
+
+.c-container-img-center {
+    text-align: center;
+}
+
+.c-img-jumbo {
+    max-width: 700px;
+}
+
+.c-body {
+    background: #fff7e6;
+}
+
+.dropdown-menu{
+    --bs-dropdown-link-active-bg: #737373;
+}
+
+.nav-link {
+    color: white;
+}
+
+.navbar-nav {
+    --bs-nav-link-padding-x: 0.5rem;
+}
+
+.c-border-round{
+    border-radius: 10px;
+}
+
+/* FUCKS the NAVBAR Hamburger Menu up*/
+/*.nav-link {*/
+/*    height: 60px;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
+
+/*#navbarNav {*/
+/*    height: 60px;*/
+/*    margin-top: 0;*/
+/*    margin-bottom: 0;*/
+/*    */
+/*}*/
