--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -63,9 +63,9 @@
     </main>
     <aside class="col-3 d-none d-md-block pt-5">
 
-        @* <div id="VCWeather"> *@
-        @* *@
-        @* </div><br/> *@
+        <div id="VCWeather">
+        
+        </div><br/>
 
         @{
             if (currentController != "news" || currentAction != "economy")
