--- a/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
@@ -8,7 +8,7 @@
     List<string> colours = new() { "bg-warning", "bg-success", "bg-danger" };
     List<Article> list = new();
 
-    for(int i = 0; i < 3; i++)
+    for (int i = 0; i < 3; i++)
     {
         <h3>@statuses[i]</h3>
         <div style="overflow:auto; max-height:150px" class="mb-4 @colours[i]">
@@ -21,10 +21,17 @@
                 }
                 else
                 {
-                    foreach (var article in (List<Article>)Model.GetType().GetProperty(statuses[i])!.GetValue(Model)!)
-                    {
-                        <h4>Article: @article.Headline</h4>
-                    }
+                    if (i == 1)
+                        foreach (var article in (List<Article>)Model.GetType().GetProperty(statuses[i])!.GetValue(Model)!)
+                        {
+                            <h4>Article: <a style="color: black" asp-controller="News" asp-action="Article" asp-route-id="@article.Id">@article.Headline</a></h4>
+                        }
+
+                    else
+                        foreach (var article in (List<Article>)Model.GetType().GetProperty(statuses[i])!.GetValue(Model)!)
+                        {
+                            <h4>Article: @article.Headline</h4>
+                        }
                 }
             }
         </div>
