--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -73,6 +73,7 @@
 				<p>Windspeed: @windSpeed @windStr m/s </p>
 				<p>Winddirection: @windDirection @windDir°</p>				
 				<p><a href="https://www.smhi.se/en/q/Linköping/2694762">Weather SMHI</a></p>
+				@* <script src='https://unpkg.com/simple-statistics@7.8.3/dist/simple-statistics.min.js'></script> *@
 			</div>
 		</div>
 	</div>
