Did some stuff.

--- a/CNewsProject/Views/Account/ForgotPassword.cshtml
+++ b/CNewsProject/Views/Account/ForgotPassword.cshtml
@@ -1,7 +1,11 @@
 ﻿@model string
 
-<form asp-action="ForgotPassword" method="post">
-    <h3>Email please</h3>
-    <input name="email" class="form-control" />
-    <input type="submit" class="btn btn-primary" />
-</form>
+<div class="row">
+    <div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+        <form asp-action="ForgotPassword" method="post">
+            <h3>Email please</h3>
+            <input name="email" class="form-control"/>
+            <input type="submit" class="mt-3 btn btn-primary"/>
+        </form>
+    </div>
+</div>
