--- a/CNewsProject/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/CNewsProject/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,2 +1,2 @@
 ﻿<h1>Forgot Password Confirmation</h1>
-<h4>Successfully Sent an email with reset Linkish brorsan. Unless you manually got here via the URL. then nothing really happened.</h4>
+<h4>Successfully Sent an email with reset link. Please go to your email.</h4>
