--- a/CNewsProject/Views/Account/Register.cshtml
+++ b/CNewsProject/Views/Account/Register.cshtml
@@ -6,24 +6,30 @@
 @*Make CNEWS Snygg again*@
 @* <h1>Someone Please make this a little bit FINARE</h1> *@
 
-<h1 class="bg-info text-white">Create User</h1>
-<a asp-action="Index" class="btn btn-secondary">Back</a>
-<div asp-validation-summary="All" class="text-danger"></div>
 
 
-@* Don't touch this though!!!!!!!!!!!!!!!!1! *@
-<form method="post">
-    <div class="form-group">
-        <label asp-for="UserName"></label>
-        <input asp-for="UserName" class="form-control" />
+<div class="row">
+    <div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+        <h1 class="">Register Account</h1>
+        <div class="text-danger" asp-validation-summary="All"></div>
+        @* Don't touch this though!!!!!!!!!!!!!!!!1! *@
+        <form method="post">
+            <div class="form-group">
+                <label asp-for="UserName"></label>
+                <input asp-for="UserName" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control"/>
+            </div>
+            
+            <button type="submit" class="btn btn-primary mt-3">Register</button>
+        </form>
+
     </div>
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
-    </div>
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
+</div>
+
