--- a/CNewsProject/Views/News/Article.cshtml
+++ b/CNewsProject/Views/News/Article.cshtml
@@ -1,4 +1,4 @@
-﻿d@model UserAndArticleIdCarrier
+﻿@model UserAndArticleIdCarrier
 
 <div id="VC1337">
     <vc:article-locker principal="@Model.Principal" id="@Model.ArticleId"></vc:article-locker>
